results/SVCOMP/4-shot/log-ExSymExeArrays-2024_03_18_19_53_36.txt
class Main {
  static int[] a;

  //@ ensures \result ==> a[0] < 0;
  //@ ensures !\result ==> a[0] >= 0;
  public static boolean f() {
    a = new int[1];
    int x = -3;

    Main inst = new Main();

    return inst.test(x);
  }

  //@ modifies a[0];
  //@ ensures a[0] == x;
  //@ ensures \result ==> a[0] < 0;
  //@ ensures !\result ==> a[0] >= 0;
  public boolean test(int x) {
    a[0] = x;
    if (a[0] >= 0) {
      return false;
    } else System.out.println("branch2 <0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> a[0] < 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> a[0] >= 0;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:15: error: An identifier with package visibility may not be used in a assignable clause with public visibility
  //@ modifies a[0];
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:16: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures a[0] == x;
              ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:17: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> a[0] < 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:18: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> a[0] >= 0;
                           ^
6 errors

